--- a/GestionUtilisateur-FrontEnd-master3/src/app/edit-enseignant-permanent/edit-enseignant-permanent.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/edit-enseignant-permanent/edit-enseignant-permanent.component.html
@@ -13,14 +13,15 @@
               <mat-panel-description>
               </mat-panel-description>
             </mat-expansion-panel-header>
-
             <mat-form-field matTooltip="8 chiffres au minimum" matTooltipPosition="above">
-              <input matInput type="text" name="matricule" #input maxlength="8" placeholder="Matricule" [(ngModel)]="enseignantP.matricule" required>
+              <input matInput type="text" name="matricule" [formControl]="matricule"  #input maxlength="8" placeholder="Matricule" [(ngModel)]="enseignantP.matricule" required>
               <mat-hint align="end">{{input.value?.length||0}}/8</mat-hint>
+              <mat-error *ngIf="matricule.invalid">{{getErrorMessageM()}}</mat-error>
             </mat-form-field>
             <mat-form-field  matTooltip="8 chiffres au minimum" matTooltipPosition="above">
-              <input matInput type="text" name="cin" #input1 maxlength="8" placeholder="CIN"  [(ngModel)]="enseignantP.cin" required>
+              <input matInput type="text" name="cin" #input1 [formControl]="cinM" maxlength="8" placeholder="CIN"  [(ngModel)]="enseignantP.cin" required>
               <mat-hint align="end">{{input1.value?.length||0}}/8</mat-hint>
+              <mat-error *ngIf="cinM.invalid">{{getErrorMessageC()}}</mat-error>
             </mat-form-field>
             <mat-form-field matTooltip="3 caractéres au minimum" matTooltipPosition="above">
               <input matInput placeholder="Nom" type="text" name="nom" [formControl]="nom"  [(ngModel)]="enseignantP.nom" required>
@@ -40,29 +41,31 @@
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
             <mat-form-field matTooltip="3 caractéres au minimum" matTooltipPosition="above">
-                <input matInput placeholder="Lieu de Naissance" [formControl]="lieuNaisFr" type="text" name="lieu" [(ngModel)]="enseignantP.lieuNaissance">
-                <mat-error *ngIf="lieuNaisFr.invalid">{{getErrorMessageLNaissFr()}}</mat-error>
+                <input matInput placeholder="Lieu de Naissance" [formControl]="lieuNaissFr" type="text" name="lieu" [(ngModel)]="enseignantP.lieuNaissance">
+                <mat-error *ngIf="lieuNaissFr.invalid">{{getErrorMessageLNaisFr()}}</mat-error>
             </mat-form-field>
             <mat-radio-group [(ngModel)]="enseignantP.sexe" name="sexe">
               <mat-radio-button value="Femme">Femme</mat-radio-button>
               <mat-radio-button value="Homme">Homme</mat-radio-button>
             </mat-radio-group>
-            <mat-form-field>
-              <input matInput placeholder="Téléphone" type="text" name="telephone" [(ngModel)]="enseignantP.telephone">
+            <mat-form-field matTooltip="8 chiffres au minimum" matTooltipPosition="above">
+              <input matInput placeholder="Téléphone" [formControl]="tel" type="text" name="telephone" [(ngModel)]="enseignantP.telephone">
+              <mat-error *ngIf="tel.invalid">getErrorMessageT()</mat-error>
             </mat-form-field>
             <mat-form-field>
-              <input matInput placeholder="Email" type="email" name="email" [(ngModel)]="enseignantP.email" required>
+              <input matInput placeholder="Email" [formControl]="email" type="email" name="email" [(ngModel)]="enseignantP.email">
               <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
             <mat-form-field>
-              <textarea matInput placeholder="Adresse" type="text" name="adresse" [(ngModel)]="enseignantP.adresse" required></textarea>
+              <textarea matInput placeholder="Adresse" type="text" name="adresse" [(ngModel)]="enseignantP.adresse"></textarea>
             </mat-form-field>
-            <mat-form-field matTooltip="Max 4 caractére" matTooltipPosition="above">
-              <input matInput #input2 maxlength="4" placeholder="Code Postal" type="text" name="code" [(ngModel)]="enseignantP.codepostal">
+            <mat-form-field matTooltip="Max 4 chiffres" matTooltipPosition="above">
+              <input matInput #input2 maxlength="4" [formControl]="codePostal" placeholder="Code Postal" type="text" name="code" [(ngModel)]="enseignantP.codepostal">
               <mat-hint align="end">{{input2.value?.length||0}}/4</mat-hint>
+              <mat-error *ngIf="codePostal.invalid">getErrorMessageCode()</mat-error>
             </mat-form-field>
             <mat-form-field hintLabel="Max 20 caractére">
-              <input matInput #input3 maxlength="20" placeholder="RIB" type="text" name="rib" [(ngModel)]="enseignantP.rib" required>
+              <input matInput #input3 maxlength="20" placeholder="RIB" type="text" name="rib" [(ngModel)]="enseignantP.rib">
               <mat-hint align="end">{{input3.value?.length||0}}/20</mat-hint>
             </mat-form-field><br>
             <mat-radio-group [(ngModel)]="enseignantP.etatCivil" name="etatcivil" #etatcivil>
@@ -100,18 +103,18 @@
       <mat-hint align="end">{{input.value?.length||0}}/12</mat-hint>
       <mat-error *ngIf="matricule.invalid">{{getErrorMessageM()}}</mat-error>
     </mat-form-field>
-    <mat-form-field  matTooltip="8 chiffres au minimum" matTooltipPosition="above">
+    <mat-form-field matTooltip="8 chiffres au minimum" matTooltipPosition="above">
       <input matInput type="text" [formControl]="cinM" name="cin" #input1 maxlength="8" placeholder="ب.ت.و."  [(ngModel)]="enseignantP.cin" required>
       <mat-hint align="end">{{input1.value?.length||0}}/8</mat-hint>
       <mat-error *ngIf="cinM.invalid">{{getErrorMessageC()}}</mat-error>
     </mat-form-field>
         <mat-form-field matTooltip="4 caractéres au minimum" matTooltipPosition="above">
             <input matInput placeholder="الإسم" [formControl]="nomAr" type="text" name="nomar" [(ngModel)]="enseignantP.prenomAr" required>
-            <mat-error *ngIf="nomAr.invalid">{{getErrorMessageNomAr()}}</mat-error>
+            <mat-error *ngIf="nomAr.invalid">{{getErrorMessageNAr()}}</mat-error>
           </mat-form-field>
         <mat-form-field matTooltip="4 caractéres au minimum" matTooltipPosition="above">
             <input matInput placeholder="اللقب" [formControl]="prenomAr" type="text" name="prenomar"  [(ngModel)]="enseignantP.nomAr" required>
-            <mat-error *ngIf="prenomAr.invalid">{{getErrorMessagePrenomAr()}}</mat-error>
+            <mat-error *ngIf="prenomAr.invalid">{{getErrorMessagePAr()}}</mat-error>
           </mat-form-field>
           <mat-form-field matTooltip="4 caractéres au minimum" matTooltipPosition="above">
             <input matInput placeholder="إسم الأب" type="text" [formControl]="nomPereAr" name="nomperear" [(ngModel)]="enseignantP.nompereAr">
@@ -133,18 +136,18 @@
       <input matInput placeholder="الهاتف" type="text" name="telephone" [(ngModel)]="enseignantP.telephone">
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="البريد الإلكتروني" type="email" name="email" [(ngModel)]="enseignantP.email" required>
+      <input matInput placeholder="البريد الإلكتروني" type="email" name="email" [(ngModel)]="enseignantP.email">
       <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
     </mat-form-field>
     <mat-form-field>
-        <textarea matInput placeholder="العنوان" type="text" name="adressear" [(ngModel)]="enseignantP.adresseAr" required></textarea>
+        <textarea matInput placeholder="العنوان" type="text" name="adressear" [(ngModel)]="enseignantP.adresseAr"></textarea>
       </mat-form-field>
     <mat-form-field matTooltip="Max 4 caractére" matTooltipPosition="above">
       <input matInput #input2 maxlength="4" placeholder="الصندوق البريدي" type="text" name="code" [(ngModel)]="enseignantP.codepostal">
       <mat-hint align="end">{{input2.value?.length||0}}/4</mat-hint>
     </mat-form-field>
        <mat-form-field hintLabel="Max 20 caractére">
-      <input matInput #input3 maxlength="20" placeholder="رقم الحساب الجاري" type="text" name="rib" [(ngModel)]="enseignantP.rib" required>
+      <input matInput #input3 maxlength="20" placeholder="رقم الحساب الجاري" type="text" name="rib" [(ngModel)]="enseignantP.rib">
       <mat-hint align="end">{{input3.value?.length||0}}/20</mat-hint>
     </mat-form-field><br>
     <mat-radio-group [(ngModel)]="enseignantP.etatCivilAr" name="etatcivilar" #etatcivil>
@@ -182,34 +185,35 @@
           </mat-expansion-panel-header>
           <div *ngIf="enfants!=null">
           <form #enfant *ngFor="let e of enfants; let i=index">
-              <mat-form-field matTooltip="3 caractères au minimum" matTooltipPosition="above">
-                  <input matInput placeholder="Nom Enfant" [formControl]="nomEnfantFr" type="text" name="nomenf" required [(ngModel)]="e.nom">
-                  <mat-error *ngIf="nomEnfantFr.invalid">{{getErrorMessageNomEnfFr()}}</mat-error>
+              <mat-form-field>
+                  <input matInput placeholder="Nom Enfant" type="text" name="nomenf" [(ngModel)]="e.nom" disabled>
                 </mat-form-field>
-                <mat-form-field matTooltip="4 caractères au minimum" matTooltipPosition="above"> 
-                    <input matInput placeholder="إسم الإبن" [formControl]="nomEnfantAr" type="text" name="nomar" required [(ngModel)]="e.nomAr">
-                    <mat-error *ngIf="nomEnfantAr.invalid">{{getErrorMessageNomEnfAr()}}</mat-error>
+                <mat-form-field> 
+                    <input matInput placeholder="إسم الإبن" type="text" name="nomenfar" [(ngModel)]="e.nomAr" disabled>
                   </mat-form-field>
             <mat-form-field>
-              <input matInput [matDatepicker]="pickerEn1" placeholder="Date de Naissance/تاريخ الولادة" name="enf" [(ngModel)]="e.dateNais" disabled>
+              <input matInput [matDatepicker]="pickerEn1" placeholder="Date de Naissance/تاريخ الولادة" name="enfDate" [(ngModel)]="e.dateNais" disabled>
               <mat-datepicker-toggle matSuffix [for]="pickerEn1"></mat-datepicker-toggle>
-              <mat-datepicker #pickerEn1 [(ngModel)]="e.dateNais"></mat-datepicker>
+              <mat-datepicker #pickerEn1></mat-datepicker>
             </mat-form-field>
             <button mat-mini-fab color="black" (click)="ModifierEnfants(e)"><mat-icon>edit</mat-icon></button>
           </form>
         </div>
           <form *ngFor="let e of newEnfants; let i=index">
-            <mat-form-field>
-              <input matInput placeholder="Nom Enfant" type="text" name="nomenf" required [(ngModel)]="e.nom" >
+            <mat-form-field matTooltip="3 caractères au minimum" matTooltipPosition="above">
+              <input matInput placeholder="Nom Enfant" [formControl]="nomEnfantFr" type="text" name="nomenf" required [(ngModel)]="e.nom">
+              <mat-error *ngIf="nomEnfantFr.invalid">{{getErrorMessageNomEnfFr()}}</mat-error>
             </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="إسم الإبن" type="text" name="nomenfar" required [(ngModel)]="e.nomAr" disabled>
+            <mat-form-field matTooltip="4 caractères au minimum" matTooltipPosition="above">
+                <input matInput placeholder="إسم الإبن" [formControl]="nomEnfantAr" type="text" name="nomenfar" required [(ngModel)]="e.nomAr">
+                <mat-error *ngIf="nomEnfantAr.invalid">{{getErrorMessageNomEnfAr()}}</mat-error>
               </mat-form-field>
             <mat-form-field>
               <input matInput [matDatepicker]="pickerEn" placeholder="Date de Naissance/تاريخ الولادة" name="datenf" [(ngModel)]="e.dateNais">
               <mat-datepicker-toggle matSuffix [for]="pickerEn"></mat-datepicker-toggle>
               <mat-datepicker #pickerEn></mat-datepicker>
             </mat-form-field>
+            
           </form>
           <button mat-mini-fab color="primary" (click)="ajouterEnfants()"><mat-icon>add</mat-icon></button>
         </mat-expansion-panel>
@@ -532,7 +536,7 @@
             </div>
           </mat-expansion-panel>
           <!--end Etat-->
-          <button  class="btn btn-primary" (click)=" updateEnseignant()" [disabled]=" valideFormulaire()">{{'Table.CModifier' | translate}}</button>
+          <button  class="btn btn-primary" (click)="updateEnseignant()" [disabled]="valideFormulaire()">{{'Table.CModifier' | translate}}</button>
           <button  class="btn btn-warning" (click)="Annuler()">{{'Table.CAnnuler' | translate}}</button>
         </form>
       </mat-accordion>
